# pong

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: config.yml
include/: Ball.hpp  Paddle.hpp  TemplateHeader.hpp
lib/: CMakeLists.txt
lib/Game/: Game.cpp  Game.hpp
lib/TemplateClass/: TemplateClass.cpp  TemplateClass.hpp
lib/Visuals/: Visuals.cpp  Visuals.hpp
src/: CMakeLists.txt  main.cpp
